# cardiospike

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  mypy.ini  openapi.json  pyproject.toml  swagger.json  tox.ini
cardiospike/: __init__.py  inference.py  torch_utils.py
cardiospike/api/: __init__.py  app.py  inference.py  models.py  routes.py
cardiospike/data/: __init__.py  preprocessing.py  torch_utils.py
cardiospike/models/cardio_net/: neural.py  search.py  train.py  training.py  utils.py
cardiospike/static/: style.css
cardiospike/templates/: index.html
cardiospike/utils/: math.py  visualization.py
cardiospike/web/: __init__.py  app.py
cardiospike/web/static/: style.css
cardiospike/web/templates/: index.html
data/: eval.py  test.csv  train.csv  welltory.csv
notebooks/: 01_Gleb_EDA.ipynb  02_Gleb_Fold_in_fold.ipynb  03_Gleb_FoldinFold_SanityCheck.ipynb  04_Gleb_FoldinFold_Predict.ipynb  05_Gleb_Fold_in_fold_with_win_bounds_params.ipynb  06_Gleb_Draw_Results.ipynb  08_Gleb_wave2.ipynb  CNN_V3.ipynb  CNN_V3_mirror.ipynb  CNN_V4.ipynb  CNN_V4_clear_spec.ipynb  CNN_V6.ipynb  CNN_V7.ipynb  CNN_V8-dan.ipynb  CNN_V8.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  cardio_rnn_v0.ipynb  cardio_сnn_rnn_individual.ipynb  cardio_сnn_rnn_v0.ipynb  cardio_сnn_rnn_v1.ipynb  cardio_сnn_rnn_v2-daniel.ipynb  cardio_сnn_rnn_v2.ipynb  catboost_folds_in_folds.ipynb  cookie  create_dataset__catboost_lightgbm_params.ipynb  optuna_cardionet.ipynb  optuna_cardionet_v0.ipynb  optuna_cardionet_v1-Copy1.ipynb  optuna_cardionet_v1.ipynb  optuna_cardionet_v2.ipynb  visualization.ipynb
