[tool.poetry]
name = "cardiospike"
version = "0.1.0"
description = ""
authors = ["gleb <gleberof@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.6"
sklearn = "^0.0"
pandas = "^1.2.4"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
scipy = "^1.6.3"
torch = "^1.8.1"
lightgbm = "^3.2.1"
catboost = "^0.26"
xgboost = "^1.4.2"
tqdm = "^4.61.0"
transformers = "^4.6.1"
pytorch-lightning = "^1.3.5"
Cython = "^0.29.23"
hydra-core = "^1.1.0"
optuna = "^2.8.0"
plotly = "^4.14.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
mypy = "^0.902"
flake8 = "^3.9.2"
isort = "^5.8.0"
autoflake = "^1.4"
pytest = "^6.2.4"
pre-commit = "^2.13.0"
black = "^21.6b0"
poethepoet = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
